syntax = "proto3";

option go_package = 	"./";

package auth;

service Auth{
  rpc Register(UserRegisterInfo) returns(UserResponse);
  rpc Login(UserLoginInfo) returns(UserResponse);
  rpc CheckSession(UserToken) returns (UserResponse);
  rpc Logout(UserToken) returns(Response);
  rpc ChangeUser(UserChangeInfo) returns(Response);
}

message UserRegisterInfo{
  string phone=1;
  string password=2;
  string birthday=3;
  string username=4;
  string bio=5;
  string photo=6;
}

message UserChangeInfo{
  uint32 userId=1;
  string phone=2;
  string password=3;
  string birthday=4;
  string username=5;
  string bio=6;
  string photo=7;
}

message UserLoginInfo{
  string phone=1;
  string password=3;
}

message UserResponse{
  uint32 userId=1;
  string token=2;
  bool ok=3;
}

message UserToken{
  string token=1;
}

message Response{
  bool ok=1;
}